# DenoisingZoo

./: .gitignore  CLAUDE.md  EXPERIMENT_LOG.md  JVP_BENCHMARK_PROBLEMS.md  LICENSE  LOSS_FUNCTION_INVESTIGATION_INSTRUCTIONS.md  MODAL_HARDENING_PLAN.md  MULTI_GPU_DESIGN.md  README.md  constants.py  gpu_monitor.py  helpers.py  helpers_cfg.py  launcher.py  modal.toml  model_contracts.py  pyproject.toml  train.py  train.sh  train_distributed.py
configs/: train.yaml
dataloaders/: base_dataloaders.py  celeba_dataset.py  celeba_simple_dataset.py  cifar10_dataset.py  deterministic_dataset.py  imagenet_dataset.py  kmeans_dataset.py  synthetic_shapes_dataset.py
evaluation/: __init__.py  fid.py  sample.py
hooks/: pre-commit
losses/: __init__.py  meanflow_loss.py
metal_fallbacks/: pdist.py
models/: cnn.py  mlp.py
scripts/: benchmark_forward_ad.py  benchmark_jvp_baseline.py  benchmark_meanflow_loss.py  benchmark_microbatch.py  benchmark_split_jvp.py  eval_fid.py  eval_meanflow_vs_solver.py  modal_app.py  modal_test_cuda.py  profile_jvp.py  run_benchmarks_modal.py  setup-hooks.sh  setup_modal.py  trackio_delete.py
solvers/: base_solver.py  euler_solver.py  rk4_solver.py
tests/: __init__.py  run_tests.sh  test_adaptive_weighting.py  test_dataset_items.py  test_flow_matching_math.py  test_jvp_correctness.py  test_jvp_primal_reuse.py  test_meanflow_jvp_optimization.py  test_meanflow_loss_correctness.py  test_meanflow_sampling.py  test_meanflow_strict_math.py  test_meanflow_target.py  test_model_contracts.py  test_precision_settings.py  test_time_input_convention.py  (+1 more)
(+42 files in other folders)
