[project]
name = "denoisingzoo"
version = "0.1.0"
description = "Minimal denoising research sandbox"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kyle Vedder" }]
license = { text = "MIT" }
keywords = ["pytorch", "denoising", "research"]

dependencies = [
  "torch==2.8.0",
  "torchvision>=0.20",
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
  "numpy>=1.26",
  "tqdm>=4.66",
  "matplotlib>=3.8",
  "modal>=0.68.0",
  "gdown>=5.2",
  "trackio>=0.1",
  "pytest>=8.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["losses"]  # Minimal package for dependency management

[tool.uv]
# uv will honor [project] metadata; this section is available for future settings.
